--- a/src/components/post/PostList/PostList.css
+++ b/src/components/post/PostList/PostList.css
@@ -2,7 +2,7 @@
 .posts-list {
     width: 95%;
     max-width: 1200px;
-    min-height: 100vh;
+    min-height: 200vh;
 }
 
 .posts_container {
